# yagso

./: .gitmodules  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  yagso.code-workspace
.github/agents/: yagso.agent.md
tests/: test_cli.py  test_orchestrator.py
yagso/: __init__.py  cli.py
yagso/cli/: __init__.py  __main__.py  controller.py  formatter.py  parser.py
yagso/core/: __init__.py  handlers.py  orchestrator.py
yagso/core/handlers/: __init__.py
yagso/domain/: __init__.py  manifest.py  repository.py  submodule.py
yagso/infrastructure/: __init__.py  git_ops.py  manifest_manager.py
