[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yagso"
version = "0.1.0"
description = "A Python CLI utility"
authors = [{name = "didifred", email = "didifred.web@gmail.com"}]
dependencies = [
    "gitpython>=3.1.0",
    "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
include = ["yagso*"]